# essay_eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: evaluation.py
app/core/: config.py
app/prompts/v1/: rubric_evaluation.md
app/prompts/v2/: rubric_evaluation.md
app/prompts/v3/: rubric_evaluation.md
app/services/: evaluation_service.py  llm_service.py
tests/: conftest.py  test_evaluation.py
