[tool.poetry]
name = "essay-eval-test"
version = "0.1.0"
description = ""
authors = ["eddie"]
license = "x"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.9.1"
langsmith = "<0.4"
langchain-openai = "^0.3.24"
langchain-core = "^0.3.65"
langchain-community = "^0.3.25"
jinja2 = "^3.1.6"
openai = ">=1.0.0"
azure-core = "^1.34.0"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
instructor = "^1.8.3"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
pytest-cov = "^6.2.1"
asgi-lifespan = "^2.1.0"
langgraph = "^0.4.8"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
